ProgressBar表示処理を追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
     <string name="registery_successfull">Thanks for registering!</string>
 
+<!--  Dialog progress  -->
+    <string name="please_wait">Please Wait&#8230;</string>
+
 </resources>
