--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
 
     <string name="already_have_an_account">Already have an account?</string>
     <string name="login"><u>Login</u></string>
-    
+
     <!-- Snackbar Error Message -->
     <string name="err_msg_enter_first_name">Please enter first name.</string>
     <string name="err_msg_enter_last_name">Please enter last name.</string>
@@ -35,7 +35,12 @@
     <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
     <string name="registery_successfull">Thanks for registering!</string>
 
-<!--  Dialog progress  -->
+    <!--  Dialog progress  -->
     <string name="please_wait">Please Wait&#8230;</string>
+
+    <!-- forgot password -->
+    <string name="title_forgot_password">FORGOT PASSWORD?</string>
+    <string name="forgot_password_title_description">Enter your username end e-mail address we\'ll send you a  email to reset your password</string>
+    <string name="btn_lbl_submit">Submit</string>
 
 </resources>
