ForgotPasswordにてボタン押下後のメール送信処理の実装

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,6 @@
     <string name="forgot_password_title_description">Enter your username end e-mail address we\'ll send you a  email to reset your password</string>
     <string name="btn_lbl_submit">Submit</string>
 
+    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
+
 </resources>
