--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u> </string>
     <string name="btn_lbl_register">Register</string>
 
+    <string name="register_success">You are registered successfully.</string>
+
     <string name="already_have_an_account">Already have an account?</string>
     <string name="login"><u>Login</u></string>
 
@@ -44,5 +46,6 @@
     <string name="btn_lbl_submit">Submit</string>
 
     <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
+
 
 </resources>
