--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
     <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
     <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
+    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
     <string name="registery_successfull">Thanks for registering!</string>
 
     <!--  Dialog progress  -->
@@ -57,5 +58,6 @@
     <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
 
     <string name="image_selection_failed">Image selection Failed!</string>
+
 
 </resources>
