--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,5 +59,7 @@
 
     <string name="image_selection_failed">Image selection Failed!</string>
 
+    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
+
 
 </resources>
