--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,11 @@
     <string name="image_selection_failed">Image selection Failed!</string>
 
     <string name="msg_profile_update_success">Your profile is updated successfully.</string>
+<!--    <string name="title_activity_dashboard">MainActivity</string>-->
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 
+    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
 
 </resources>
